<resources>
    <string name="app_name">DialogExample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user">New User</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="username">Name</string>
    <string name="last_name">Last Name</string>
    <string name="accept">Accept</string>
    <string name="no_user_saved">There is no stored user</string>
</resources>