<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivUser"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/ic_user" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <ImageButton
        android:id="@+id/btn_load_file"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <Button
            android:id="@+id/btn_dialog_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept"

            android:textAllCaps="false" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#CCCCCC"
            android:text="@string/cancel"
            android:textAllCaps="false" />
    </LinearLayout>


</LinearLayout>